--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                     const blob = new Blob([event.data], { type: 'image/jpeg' });
                     const url = URL.createObjectURL(blob);
                     videoElement.src = url;
-                    setTimeout(() => { myrevoke(url); }, 0);
+                    setTimeout(() => { myrevoke(videoElement.src); }, 0);
                 }
             };
 
