--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
         let websocket = null;
         const videoElement = document.getElementById('video');
         const websocketUrl = 'ws://192.168.0.124:8765';
-        let revokeTimer = null;
-        let rebootTimer = null;
+        let revokeTimer;
+        let rebootTimer;
         const myrevoke = (url) => {
             if(!url) return;
             URL.revokeObjectURL(url);
@@ -31,14 +31,14 @@
                     const blob = new Blob([event.data], { type: 'image/jpeg' });
                     const url = URL.createObjectURL(blob);
                     videoElement.src = url;
-                    setTimeout(() => { myrevoke(videoElement.src); }, 0);
+                    setTimeout(() => { myrevoke(videoElement.src); }, 100);
                 }
             };
 
             websocket.onclose = () => {
                 console.log('WebSocket connection closed. Reconnecting...');
                 if (rebootTimer) { clearTimeout(rebootTimer); }
-                rebootTimer = setTimeout(() => { initWebSocket(); }, 1000);
+                rebootTimer = setTimeout(() => { initWebSocket(); }, 2000);
             };
         };
         initWebSocket();
