--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Live Camera Stream</h1>
-    <img id="video" src="" alt="Video stream not available">
+    <img id="video" src="" alt="Video stream not available" loading="lazy">
     <script>
         let websocket = null;
         const videoElement = document.getElementById('video');
