--- a/templates/index.html
+++ b/templates/index.html
@@ -20,13 +20,9 @@
             websocket.onerror = (error) => console.error('WebSocket error:', error);
             websocket.onmessage = (event) => {
                 if(event.data instanceof Blob) {
-                    console.log(event);
-                    const blob = new Blob([event.image], { type: 'image/jpeg' });
+                    const blob = new Blob([event.data], { type: 'image/jpeg' });
                     const url = URL.createObjectURL(blob);
                     videoElement.src = url;
-
-                    console.log(event.recognition);
-
                     setTimeout(() => { myrevoke(videoElement.src); }, 1000);
                 }
             };
