--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Live Stream</title>
+</head>
+<body>
+    <h1>Live Camera Stream</h1>
+    <div id="video">
+        <img id="video" src="" alt="Video stream not available" loading="lazy">
+    </div>
+    <div id="recognitionResults"></div>
+    <script>
+        const videoElement = document.getElementById('video');
+        const websocketUrl = 'ws://192.168.0.124:8765';
+        const myrevoke = (url) => URL.revokeObjectURL(url);
+        const initWebSocket = () => {
+            const websocket = new WebSocket(websocketUrl);
+            let isReceivingFrame = true;
+            websocket.binaryType = 'arraybuffer'; 
+            // websocket.binaryType = 'blob';
+            websocket.onopen = () => console.log('WebSocket connection established.');
+            websocket.onclose = () => console.log('WebSocket connection closed');
+            websocket.onerror = (error) => console.error('WebSocket error:', error);
+            websocket.onmessage = (event) => {
+                if (typeof event.data === 'string') {
+                    // Handle JSON data (recognition results)
+                    let message = JSON.parse(event.data);
+                    let recognitionResults = message.recognition;
+
+                    // Display recognition results
+                    let resultsDiv = document.getElementById('recognitionResults');
+                    resultsDiv.innerHTML = JSON.stringify(recognitionResults, null, 2);
+                    isReceivingFrame = true; // Expecting frame data next
+                } else
+                if (event.data instanceof ArrayBuffer) {
+                    if (isReceivingFrame) {
+                        let arrayBuffer = event.data;
+                        let blob = new Blob([arrayBuffer], { type: 'image/jpeg' });
+                        let url = URL.createObjectURL(blob);
+                        document.getElementById('videoFrame').src = url;
+                        isReceivingFrame = false; // Expecting JSON data next
+                        setTimeout(() => { myrevoke(videoElement.src); }, 1000);
+                    }
+                }
+            };
+        };
+        initWebSocket();
+    </script>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Video Stream</title>
 </head>
 <body>
