--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,11 @@
     <title>Video Stream</title>
 </head>
 <body>
-    <img id="videoFrame" src="" alt="Video Frame">
-    <div id="recognitionResults"></div>
+    <div style="position: relative;">
+        <img id="videoFrame" src="" alt="Video Frame">
+        <div id="recognitionResults" style="position: absolute; right: 20px; top: 20px; font-size: 10rem; color: red"></div>
+    </div>
+    
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
@@ -21,7 +24,7 @@
                     let message = JSON.parse(event.data);
                     let recognitionResults = message.recognition;
                     let resultsDiv = document.getElementById('recognitionResults');
-                    resultsDiv.innerHTML = JSON.stringify(recognitionResults, null, 2);
+                    resultsDiv.innerHTML = recognitionResults.predictions[0]?.class;
                     isReceivingFrame = true;
                 } else if (event.data instanceof ArrayBuffer) {
                     if (isReceivingFrame) {
