--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <body>
     <div style="position: relative;">
         <img id="videoFrame" src="" alt="Video Frame">
-        <div id="recognitionResults" style="position: absolute; right: 20px; top: 20px; font-size: 10rem; color: red"></div>
+        <div id="recognitionResults" style="position: absolute; left: 20px; top: 20px; font-size: 3rem; color: green"></div>
     </div>
     
 
