--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,12 @@
                     let message = JSON.parse(event.data);
                     let recognitionResults = message.recognition;
                     let resultsDiv = document.getElementById('recognitionResults');
-                    resultsDiv.innerHTML = recognitionResults.predictions[0]?.class;
+                    if(recognitionResults.predictions[0]?.confidence < 0.5) {
+                        resultsDiv.innerHTML = recognitionResults.predictions[0]?.class;
+                    } else {
+                        resultsDiv.innerHTML = '';
+                    }
+                    
                     isReceivingFrame = true;
                 } else if (event.data instanceof ArrayBuffer) {
                     if (isReceivingFrame) {
